# geant4-sim

./: CMakeLists.txt
config/: config_Cu  config_Pt  config_W  run.mac
include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh  RunAction.hh  Scintillator.hh  calorimeter.hh  cherenkov.hh  config.hh  timepix.hh
src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGenerator.cc  RunAction.cc  Scintillator.cc  calorimeter.cc  cherenkov.cc  config.cc  main.cc  timepix.cc
